--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 
     <!-- 主界面 -->
     <string name="app_name">豆瓣书影</string>
-    <string name="action_settings">设置</string>
+    <string name="action_about">关于</string>
 
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
@@ -21,14 +21,21 @@
     <!-- 搜索 -->
     <string name="search_hint">搜索</string>
 
+    <!-- Book Detail -->
+    <string name="book_detail_start_in_browser">浏览器打开</string>
+
+    <!-- Movie Detail -->
+    <string name="movie_detail_start_in_browser">浏览器打开</string>
+
     <!-- Temp -->
 
     <string name="title_activity_get_authorization_code">GetAuthorizationCodeActivity</string>
-
     <string name="hello_world">Hello world!</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_about">AboutActivity</string>
+    <string name="title_activity_movie_detail">MovieDetailActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_book_detail">BookDetailActivity</string>
 
 
 </resources>
