--- a/main/src/main/res/values/strings.xml
+++ b/main/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
 
-    <string name="app_name">SimpleBookMovie</string>
+    <!-- Application Name -->
+    <string name="app_name">简单书影</string>
+
+    <!-- Main Activity -->
 
 </resources>
