实现电影 Board 与 Top 榜单

--- a/main/src/main/res/values/strings.xml
+++ b/main/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
 
+    <!-- Test -->
+    <string name="test">Test</string>
+
     <!-- Application Name -->
     <string name="app_name">简单书影</string>
 
