--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
 
     <!-- Common Strings -->
     <string name="default_image_description">Image</string>
-    <string name="common_get_data">正在获取数据，请稍后~</string>
-    <string name="common_upload_data">正在上传数据，请稍后~</string>
+    <string name="common_get_data">getting data, please wait ~</string>
+    <string name="common_upload_data">uploading data, please wait ~</string>
 
     <!-- Main Activity -->
     <string name="main_tab_book">Book</string>
