--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -20,16 +20,16 @@
     <string name="login">登录</string>
     <string name="login_first">请先登录</string>
 
-    <!-- Book Detail -->
+    <!-- Detail -->
+    <string name="detail_menu_web">浏览网页版</string>
     <string name="book_detail_title">书籍详情</string>
-
-    <!-- Movie Detail -->
     <string name="movie_detail_title">影视详情</string>
 
     <!-- Search -->
     <string name="search_type_book">书籍</string>
     <string name="search_type_movie">影视</string>
     <string name="search_hint">搜索</string>
+    <string name="search_input_empty">输入为空</string>
 
     <!-- User Fragment -->
     <string name="user_name">昵称</string>
